fixed view on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2634,6 +2634,10 @@ textarea {
   margin: auto;
 }
 
+input:disabled {
+  background-color: #d8cccc;
+}
+
 @media only screen and (max-width: 768px) {
   .fixed-bottom-bar {
     position: fixed;
